--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
-$dbHostName = 'localhost';
-$db = 'burgers';
-$dbUserName = 'root';
-$dbPassword = '';
+DB_HOST_NAME=localhost
+DB=burgers
+DB_USER_NAME=root
+DB_PASSWORD=
+MAIL_HOST=smtp.mail.ru
+MAIL_PORT=587
+MAIL_SECURITY=tls
+MAIL_FROM_NAME=zzz@inbox.ru
+MAIL_FROM_PASSWORD=aaz544kl
