--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
         }
     },
     "require": {
-        "symfony/dotenv": "^4.1"
+        "symfony/dotenv": "^4.1",
+        "swiftmailer/swiftmailer": "^6.0",
+        "twig/twig": "^2.4"
     }
 }
